lexion_lang/tests/snapshots/x86_smoke__x86_smoke_one_eightbyte_aggregate_abi_values.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_aggregate_abi.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global shift
shift:
# fn shift(point: Point) -> Point {
  push rbp
  mov rbp, rsp
  sub rsp, 16
  push rdi
  mov eax, DWORD PTR [rsp]
  mov DWORD PTR [rbp-16], eax
  mov eax, DWORD PTR [rsp+4]
  mov DWORD PTR [rbp-16+4], eax
  add rsp, 8
#     return Point { x: point.x + 1, y: point.y + 2 };
  mov esi, DWORD PTR [rbp-16]
  mov edx, esi
  add edx, 1
  mov DWORD PTR [rbp-8], edx
  mov esi, DWORD PTR [rbp-12]
  mov edi, esi
  add edi, 2
  mov DWORD PTR [rbp-4], edi
  sub rsp, 8
  mov QWORD PTR [rsp], 0
  mov eax, DWORD PTR [rbp-8]
  mov DWORD PTR [rsp], eax
  mov eax, DWORD PTR [rbp-8+4]
  mov DWORD PTR [rsp+4], eax
  mov rax, QWORD PTR [rsp]
  add rsp, 8
  add rsp, 16
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 48
#     let point = Point { x: 3, y: 4 };
  mov eax, 3
  mov DWORD PTR [rbp-16], eax
  mov eax, 4
  mov DWORD PTR [rbp-12], eax
  mov eax, DWORD PTR [rbp-16]
  mov DWORD PTR [rbp-32], eax
  mov eax, DWORD PTR [rbp-16+4]
  mov DWORD PTR [rbp-32+4], eax
#     let shifted = shift(point);
  sub rsp, 8
  mov QWORD PTR [rsp], 0
  mov eax, DWORD PTR [rbp-32]
  mov DWORD PTR [rsp], eax
  mov eax, DWORD PTR [rbp-32+4]
  mov DWORD PTR [rsp+4], eax
  mov rax, QWORD PTR [rsp]
  add rsp, 8
  push rax
  pop rdi
  call shift
  push rax
  mov eax, DWORD PTR [rsp]
  mov DWORD PTR [rbp-24], eax
  mov eax, DWORD PTR [rsp+4]
  mov DWORD PTR [rbp-24+4], eax
  add rsp, 8
  mov eax, DWORD PTR [rbp-24]
  mov DWORD PTR [rbp-40], eax
  mov eax, DWORD PTR [rbp-24+4]
  mov DWORD PTR [rbp-40+4], eax
#     return shifted.x + shifted.y;
  mov eax, DWORD PTR [rbp-40]
  mov DWORD PTR [rbp-8], eax
  mov esi, DWORD PTR [rbp-36]
  mov eax, DWORD PTR [rbp-8]
  add eax, esi
  add rsp, 48
  pop rbp
  ret
