lexion_lang/tests/snapshots/x86_smoke__x86_smoke_reference_borrow.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_reference_borrow.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 32
#     let value = 1;
  mov eax, 1
  mov DWORD PTR [rbp-24], eax
#     let reference = &value;
  lea rax, [rbp-24]
  mov QWORD PTR [rbp-8], rax
  mov rax, QWORD PTR [rbp-8]
  mov QWORD PTR [rbp-16], rax
#     return value;
  mov eax, DWORD PTR [rbp-24]
  add rsp, 32
  pop rbp
  ret
