lexion_lang/tests/snapshots/x86_smoke__x86_smoke_reference_dereference.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_reference_dereference.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 32
#     let value = 1;
  mov eax, 1
  mov DWORD PTR [rbp-32], eax
#     let reference = &value;
  lea rax, [rbp-32]
  mov QWORD PTR [rbp-16], rax
  mov rax, QWORD PTR [rbp-16]
  mov QWORD PTR [rbp-24], rax
#     *reference = 2;
  mov ecx, 2
  mov rax, QWORD PTR [rbp-24]
  mov DWORD PTR [rax], ecx
#     return *reference;
  mov rax, QWORD PTR [rbp-24]
  mov eax, DWORD PTR [rax]
  add rsp, 32
  pop rbp
  ret
