lexion_lang/tests/snapshots/x86_smoke__x86_smoke_return_bool_comparison.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_return_bool.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global main
main:
# fn main() -> bool {
  push rbp
  mov rbp, rsp
  sub rsp, 16
#     let less = 1 < 2;
  mov eax, 1
  cmp eax, 2
  setl al
  movzx eax, al
  mov DWORD PTR [rbp-4], eax
  mov eax, DWORD PTR [rbp-4]
  mov DWORD PTR [rbp-12], eax
#     let same = less == true;
  mov eax, DWORD PTR [rbp-12]
  cmp eax, 1
  sete al
  movzx eax, al
  mov DWORD PTR [rbp-8], eax
  mov eax, DWORD PTR [rbp-8]
  mov DWORD PTR [rbp-16], eax
#     return same;
  mov eax, DWORD PTR [rbp-16]
  mov rsp, rbp
  pop rbp
  ret
