lexion_lang/tests/snapshots/x86_smoke__x86_smoke_shift_preserves_allocated_registers.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: assembly
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global main
main:
# fn main(a: i32, b: i32, c: i32, d: i32) -> i32 {
  push rbp
  mov rbp, rsp
#     let count = a + 1;
  mov eax, edi
  add eax, 1
  mov edi, eax
#     let left = b + 2;
  mov eax, esi
  add eax, 2
  mov esi, eax
#     let keep1 = c + 3;
  mov eax, edx
  add eax, 3
  mov edx, eax
#     let keep2 = d + 4;
  mov eax, ecx
  add eax, 4
  mov ecx, eax
#     let shifted = left << count;
  mov eax, esi
  push rcx
  mov ecx, edi
  shl eax, cl
  pop rcx
  mov esi, eax
#     return shifted + keep1 + keep2 + count;
  mov eax, esi
  add eax, edx
  mov esi, eax
  add esi, ecx
  mov eax, esi
  add eax, edi
  pop rbp
  ret
